2136_kool_form_pack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web01-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: koo.timiscodes.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web01-service
                port:
                  number: 80
